--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
+<html lang="" data-bs-theme="dark">
+  <head >
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="h-100 w-100 d-block"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
