--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/src/assets/main.css" rel="stylesheet">
-    <title>Vite App</title>
+    <title>Pjarek Home Server</title>
   </head>
   <body>
     <div id="app" class="h-100 w-100 d-block"></div>
