--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="" data-bs-theme="dark">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/assets/styles.scss" rel="stylesheet" />
-    <title>Pjarek Home Server</title>
-  </head>
-  <body>
-    <div id="app" class="h-100 w-100 d-block"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="/src/assets/styles.scss" rel="stylesheet" />
+  <title>Pjarek Home Server</title>
+</head>
+
+<body>
+  <div id="app" class="vh-100"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
